Now works with any sort of button input - previously was brittle and would break when naming convention was not adhered to. Now continues to work when invalid images are provided rather than breaking. (This introduced a new bug where if the first image was invalid, then the dynamic sizing would fail. This has been resolved.) Added extra styling for smaller screens. Added an alert for if the root element provided is incorrect. Fixed issue where images being uneven sizes broke the modal. Fixed superfluous classes being added to several buttons. Added semicolons and converted unnecessary lets to consts

--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@
 
 #hallway-blender-root {
     max-width: var(--max-width);
+    max-width: 1400px;
     font-family: Arial, sans-serif;
     transition: 0.5s;
 }
@@ -144,6 +145,7 @@ body,
 #category-button-container button.category-button {
     text-align: left;
     padding: 10px 10px 10px 30px;
+    overflow-wrap: break-word;
 }
 
 #hallway-parent-image-container .image-container {
@@ -156,7 +158,8 @@ body,
     top: 0;
     bottom: 0;
     visibility: hidden;
-    transition: visibility 0s, opacity 0.3s
+    transition: visibility 0s, opacity 0.3s;
+    overflow: hidden;
 }
 #selection-button-container .click_button:not([class*="selected-image-"]){
     background-color: var(--disabled-background);
@@ -240,8 +243,14 @@ body,
 .hide {
     display: none;
 }
+.disable {
+    pointer-events: none !important;
+    background: #e2e2ea !important;
+    text-decoration: line-through;
+    text-decoration-color: red;
+}
 
-@media (max-width: 600px) {
+@media (max-width: 599px) {
     #button-container {
         flex-direction: column;
     }
@@ -284,5 +293,15 @@ body,
     }
     #hw-overlay-content {
         font-size: 14px;
+    }
+}
+
+@media (max-width: 350px) {
+    #category-button-container button.category-button {
+        padding: 0;
+        font-size: 18px;
+    }
+    #selection-button-container button {
+        font-size: 12px;
     }
 }
